@@ -13,6 +13,12 @@ DEV
 
 - use newer version of virtualenv for jenkins trigger. Thank brunsgaard.
 
+- fix replication issue reported by a customer: if a replica lags
+  behind a master and a file was created and then deleted meanwhile,
+  the replica would get stuck with a FileReplicationError.  We now
+  let the master report a 410 GONE code so that the replica knows
+  it can safely proceed because the file was deleted later anyways.
+
 2.1.0
 ----------------
 
